--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -15,6 +15,7 @@ jobs:
       fail-fast: false
       matrix:
         version:
+          - "1.6"  # LTS
           - "1"    # Latest Release
         os:
           - ubuntu-latest
@@ -63,11 +64,11 @@ jobs:
       - uses: voxmedia/github-action-slack-notify-build@v1
         if: env.WORKFLOW_CONCLUSION == 'failure'
         with:
-          channel: nightly-rse
+          channel: nightly-dev
           status: FAILED
           color: danger
         env:
-          SLACK_BOT_TOKEN: ${{ secrets.RSE_SLACK_BOT_TOKEN }}
+          SLACK_BOT_TOKEN: ${{ secrets.DEV_SLACK_BOT_TOKEN }}
 
   docs:
     name: Documentation
