Use current directory for Docker Context when running SAM build

--- a/template_files/template.yml
+++ b/template_files/template.yml
@@ -12,7 +12,7 @@ Resources:
       Timeout: 60
     Metadata:
       Dockerfile: Dockerfile
-      DockerContext: ./template_files
+      DockerContext: .
       DockerTag: julia1.6-v1
 
 Outputs:
